Remove package detectors and use the new ones from codingstyle.